Fixed topics to work on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -3,13 +3,13 @@
     padding-right:0;
 }
 
-.panel-heading a:after {
+.panel-heading button:after {
     font-family:'Glyphicons Halflings';
     content:"\e114";
     float: right;
     color: grey;
 }
-.panel-heading a.collapsed:after {
+.panel-heading button.collapsed:after {
     content:"\e080";
 }
 p {
